tests/baselines/reference/switchAssignmentCompat.errors.txt
tests/cases/compiler/switchAssignmentCompat.ts(4,10): error TS2678: Type 'typeof Foo' is not comparable to type 'number'.


==== tests/cases/compiler/switchAssignmentCompat.ts (1 errors) ====
    class Foo { }
    
    switch (0) {
        case Foo: break; // Error expected
             ~~~
!!! error TS2678: Type 'typeof Foo' is not comparable to type 'number'.
    }
    